Update theme color with route meta

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="/favicon.ico">
-	<meta name="description" content="Your app description">
+	<meta name="description" content="Binary logic puzzle, also called takuzu or binairo.">
 	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00aba9">
 	<meta name="msapplication-TileColor" content="#00aba9">
