Improve App.vue inits, extract overlay-container to index.html

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
   </head>
   <body>
     <div id="app"></div>
+	<!-- container for overlays, for use with <teleport> component -->
+	<div id="overlay-wrapper">
+		<div id="overlay-container"></div>
+	</div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
